[package]
name = "my-vercel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
serde = {version = "1", features = ["derive"] }
image = "0.23.14"
base64 = "0.22.1"
vercel_runtime = { version = "1" }
[[bin]]
name = "main"
path = "api/main.rs"

